--- a/04-28/style.css
+++ b/04-28/style.css
@@ -2,4 +2,41 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif  ;
+}
+main{
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+}
+.modal{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    background-color: aliceblue;
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 500px;
+    height: 350px;
+    display: none;
+}
+button{
+    padding: 8px 12px;
+    font-size: large;
+    border-radius: 10px;
+    background-color: green;
+    color: white;
+    border: none;
+}
+.flex{
+    padding: 16px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+#closeModal{
+
+    background-color: red;
 }
